# code-mind

./: .gitignore  GETTING_STARTED.md  PIPELINE_COMPONENTS_EXPLAINED.md  README.md  TECHNICAL_DEEP_DIVE.md  config.py  diff.txt  docker-compose.yml  index.faiss  index.pkl  loki.yml  main.py  otel-collector.yml  preprocess.py  pyproject.toml  query_db.py  start_api.py  test.py  test_diff.patch  test_github_integration.py
api/: main.py  models.py
api/routes/: conversations.py  github.py  repositories.py  reviews.py
cli/: commands.py  config.py
core/: chunk_types.py  chunker.py  fallback_chunker.py  generic_extractor.py  language_registry.py  vectordb.py
docker/: README.md  docker-compose.yml  loki.yml  otel-collector.yml  prometheus.yml  test-stack.sh
docker/grafana/dashboards/: turbo-review-overview.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
grafana/dashboards/: codemind-overview.json
graph_engine/: graph_builder.py  knowledge_graph.py  search.py  summarizer.py
inference/: __init__.py  huggingface_client.py  openai_client.py  openrouter_client.py  prompt_builder.py  response_parser.py
integrations/: github.py
monitoring/: telemetry.py
processing/: ast_resolver.py  diff_processor.py  lsp_resolver.py  reranker.py
services/: __init__.py  code_review_service.py  codebase_service.py  review_service.py
storage/: database.py  graph_store.py  vector_store.py
tests/: test_chunker.py  test_diff_processor.py  test_lsp_resolver.py  test_vectordb.py
utils/: content_utils.py  gitignore.py  local_repo_manager.py  logging.py  remote_repo_manager.py  repo_manager.py
vector_db/: vector_db.faiss  vector_db.graph  vector_db.pkl
