[project]
name = "codemind"
version = "0.1.0"
description = "AI-powered codebase intelligence platform for natural language chat, semantic search, and automated code reviews"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai>=1.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "unidiff>=0.7.5",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "python-dotenv>=1.0.0",
    "multilspy>=0.0.15",
    "pyvis>=0.3.2",
    "jinja2>=3.1.6",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "gitpython>=3.1.44",
    "boto3>=1.39.4",
    "qdrant-client>=1.14.3",
    "neo4j>=5.28.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "core", "processing", "tests", "utils", "integrations", "inference", "monitoring", "services"]

[project.scripts]
codemind = "main:main"
codemind-api = "api.main:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:builtin type SwigPyPacked",
    "ignore::DeprecationWarning:builtin type SwigPyObject",
    "ignore::DeprecationWarning:builtin type swigvarlink",
]
